<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="38sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:text="@string/seekBar_txt_height" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <SeekBar
                android:id="@+id/seekBarHeight"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:progressDrawable="@drawable/shape_custom_progress_seekbar"
                android:thumb="@drawable/shape_custom_thumb_seekbar"
                android:max="250" />
            <TextView
                android:id="@+id/text_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/number_zero"/>
            <TextView
                android:id="@+id/text_medida_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/cm" />
        </TableRow>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/seekBar_txt_weight" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <SeekBar
                android:id="@+id/seekBarWeight"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:progressDrawable="@drawable/shape_custom_progress_seekbar"
                android:thumb="@drawable/shape_custom_thumb_seekbar"
                android:max="300" />

            <TextView
                android:id="@+id/text_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/number_zero"/>
            <TextView
                android:id="@+id/text_medida_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/kg" />
        </TableRow>

        <ImageButton
            android:id="@+id/button"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/custom_button"
            android:src="@drawable/ic_baseline_arrow_right_alt_24"
            android:contentDescription="@string/seta_de_continuação" />
        <TextView
            android:id="@+id/imc_text"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="índice de massa corporal, ou IMC, é usado para determinar se
você em uma faixa de peso saudável para a sua altura" />

        <TextView
            android:id="@+id/result_imc"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="você em uma faixa de peso saudável para a sua altura" />

        <TextView
            android:id="@+id/result_imc_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="Bom" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>